[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/beaker/Beaker.gd" type="Script" id=1]
[ext_resource path="res://game/beaker/HealthLabel.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 405 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 270, 20 )

[node name="Beaker" type="Node2D"]
script = ExtResource( 1 )

[node name="RightWall" type="RigidBody2D" parent="." groups=[
"walls",
]]
position = Vector2( 630, 540 )
mode = 1

[node name="RightWallCollisionShape" type="CollisionShape2D" parent="RightWall"]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="RightWall"]
margin_left = -20.0
margin_top = -400.0
margin_right = 20.0
margin_bottom = 400.0
color = Color( 0.639216, 0.988235, 0.980392, 0.513726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftWall" type="RigidBody2D" parent="." groups=[
"walls",
]]
position = Vector2( 90, 540 )
mode = 1

[node name="LeftWallCollisionShape" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="LeftWall"]
margin_left = -20.0
margin_top = -400.0
margin_right = 20.0
margin_bottom = 400.0
color = Color( 0.639216, 0.988235, 0.980392, 0.513726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowerWall" type="RigidBody2D" parent="." groups=[
"walls",
]]
position = Vector2( 360, 945 )
mode = 1

[node name="LowerWallCollisionShape" type="CollisionShape2D" parent="LowerWall"]
shape = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="LowerWall"]
margin_left = -270.0
margin_top = -20.0
margin_right = 270.0
margin_bottom = 20.0
color = Color( 0.639216, 0.988235, 0.980392, 0.513726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpperWall" type="RigidBody2D" parent="." groups=[
"walls",
]]
position = Vector2( 360, 135 )
mode = 1

[node name="UpperWallCollisionShape" type="CollisionShape2D" parent="UpperWall"]
shape = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="UpperWall"]
margin_left = -270.0
margin_top = -20.0
margin_right = 270.0
margin_bottom = 20.0
color = Color( 0.639216, 0.988235, 0.980392, 0.513726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="RichTextLabel" parent="."]
margin_left = 80.0
margin_top = 76.0
margin_right = 180.0
margin_bottom = 126.0
text = "100"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
